Backport fix: Avoid using Java 21 List.removeLast().